--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,8 +49,11 @@ dependencies {
     implementation 'com.google.http-client:google-http-client-android:+'
     implementation 'com.google.api-client:google-api-client-android:+'
     implementation 'com.google.api-client:google-api-client-gson:+'
+    implementation 'org.jetbrains:annotations-java5:15.0'
     // implementation 'com.google.firebase:firebase-auth:9.6.1'
     //  implementation'com.google.android.gms:play-services-basement'
+    implementation 'com.google.firebase:firebase-storage:16.0.1'
+    implementation 'com.google.firebase:firebase-auth:16.0.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
