--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA"> </uses-permission>
 
     <application
         android:allowBackup="true"
@@ -28,8 +29,9 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".FeedbackActivity" />
         <activity android:name=".CameraActivity" />
-        <activity android:name=".RetrieveActivity" />
-        <activity android:name=".GetActivity"></activity>
+        <activity android:name=".GetActivity" />
+        <activity android:name=".DisplayListView" />
+        <activity android:name=".Photo"></activity>
     </application>
 
 </manifest>
