--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,6 @@
     package="com.example.ioana.licenta">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.CAMERA"> </uses-permission>
 
     <application
         android:allowBackup="true"
@@ -31,7 +29,9 @@
         <activity android:name=".CameraActivity" />
         <activity android:name=".GetActivity" />
         <activity android:name=".DisplayListView" />
-        <activity android:name=".Photo"></activity>
+        <activity android:name=".Photo" />
+        <activity android:name=".GetFeedbackActivity" />
+        <activity android:name=".RetetaDetailsActivity"></activity>
     </application>
 
 </manifest>
